--- a/locales/help_docs/zh-CN.yml
+++ b/locales/help_docs/zh-CN.yml
@@ -161,7 +161,8 @@ jv:
 
     no_account_set: |
       当前工作区的账户为 `unknown`，这意味着您并未设置账户
-      使用 `jv as <账户名称>` 来为工作区指定账户
+      使用   `jv as <账户名称>` 来为工作区指定账户
+      或使用 `jv login <账户名称> <上游地址>` 来关联至上游库
 
     account_not_exist: |
       当前工作区设置的账户 `%{account}` 并未注册至您的计算机
@@ -178,7 +179,8 @@ jv:
       jv u 下载最新信息，jv t 追踪文件，jv a 对齐文件结构到表，jv in/out 导入或导出文件
 
     **上游库**：
-      direct <上游地址>       - 定向到工作区到上游库            [远程]
+      login  <账户> <地址>    - 设置账户、定向并获得上游信息    [远程]
+      direct <地址>           - 定向到工作区到上游库            [远程]
       unstain                 - 祛色工作区，清除关联
       update                  - 同步最新的信息                  [远程]
 
@@ -414,6 +416,9 @@ jv:
     内建文档包含 JustEnoughVCS 的使用指南、协作范式和最佳实践
 
   confirm:
+    login: |
+      您正在以 %{account} 身份登陆上游库 %{upstream}，请确认
+
     unstain: |
       此操作将会断开当前工作区与上游库 `%{upstream}` 的关联
       若重新连接至标识不匹配的库，会导致严重的问题，请谨慎操作！
